<resources>
    <string name="app_name">WHADAPP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="my_active_chats">My active Chats</string>
    <string name="app_logo">The App Logo</string>
    <string name="goto_my_contacts">My Contacts</string>
    <string name="settings">Settings</string>
    <string name="imageManager">imageHandling.ImageManager</string>
    <string name="directories_not_created">No permit to create directories</string>
    <string name="phoneNumber">Phonenumber</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="profile_picture">Profile picture</string>
    <string name="delete_account">Delete account</string>
    <string name="freeze_account">Freeze account</string>
    <string name="chat_picture">Chat picture</string>
    <string name="mom_s_birthday">Mom\'s birthday</string>
    <string name="chat_image">Chat image</string>
</resources>
